--- a/index.html
+++ b/index.html
@@ -2,184 +2,236 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trang chủ</title>
-    <link href="main.css" rel="stylesheet"type="text/css"/>
-    <script type='text/javascript'>
-        //<![CDATA[
-        var pictureSrc ="images/NN.png"; //the location of the snowflakes
-        var pictureWidth = 30; //the width of the snowflakes
-        var pictureHeight = 30; //the height of the snowflakes
-        var numFlakes = 10; //the number of snowflakes
-        var downSpeed = 0.01; //the falling speed of snowflakes (portion of screen per 100 ms)
-        var lrFlakes = 10; //the speed that the snowflakes should swing from side to side
+    <link href="main.css" type="text/css" rel="stylesheet">
+    <script language="javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="script/jquery-1.8.2.min.js"></script>
 
-
-        if( typeof( numFlakes ) != 'number' || Math.round( numFlakes ) != numFlakes || numFlakes < 1 ) { numFlakes = 10; }
-
-        //draw the snowflakes
-        for( var x = 0; x < numFlakes; x++ ) {
-            if( document.layers ) { //releave NS4 bug
-                document.write('<layer id="snFlkDiv'+x+'"><imgsrc="'+pictureSrc+'" height="'+pictureHeight+'"width="'+pictureWidth+'" alt="*" border="0"></layer>');
-            } else {
-                document.write('<div style="position:absolute; z-index:9999;"id="snFlkDiv'+x+'"><img src="'+pictureSrc+'"height="'+pictureHeight+'" width="'+pictureWidth+'" alt="*"border="0"></div>');
-            }
-        }
-
-        //calculate initial positions (in portions of browser window size)
-        var xcoords = new Array(), ycoords = new Array(), snFlkTemp;
-        for( var x = 0; x < numFlakes; x++ ) {
-            xcoords[x] = ( x + 1 ) / ( numFlakes + 1 );
-            do { snFlkTemp = Math.round( ( numFlakes - 1 ) * Math.random() );
-            } while( typeof( ycoords[snFlkTemp] ) == 'number' );
-            ycoords[snFlkTemp] = x / numFlakes;
-        }
-
-        //now animate
-        function flakeFall() {
-            if( !getRefToDivNest('snFlkDiv0') ) { return; }
-            var scrWidth = 0, scrHeight = 0, scrollHeight = 0, scrollWidth = 0;
-//find screen settings for all variations. doing this every time allows for resizing and scrolling
-            if( typeof( window.innerWidth ) == 'number' ) { scrWidth = window.innerWidth; scrHeight = window.innerHeight; } else {
-                if( document.documentElement && (document.documentElement.clientWidth ||document.documentElement.clientHeight ) ) {
-                    scrWidth = document.documentElement.clientWidth; scrHeight = document.documentElement.clientHeight; } else {
-                    if( document.body && ( document.body.clientWidth || document.body.clientHeight ) ) {
-                        scrWidth = document.body.clientWidth; scrHeight = document.body.clientHeight; } } }
-            if( typeof( window.pageYOffset ) == 'number' ) { scrollHeight = pageYOffset; scrollWidth = pageXOffset; } else {
-                if( document.body && ( document.body.scrollLeft ||document.body.scrollTop ) ) { scrollHeight = document.body.scrollTop;scrollWidth = document.body.scrollLeft; } else {
-                    if(document.documentElement && (document.documentElement.scrollLeft ||document.documentElement.scrollTop ) ) { scrollHeight =document.documentElement.scrollTop; scrollWidth =document.documentElement.scrollLeft; } }
-            }
-//move the snowflakes to their new position
-            for( var x = 0; x < numFlakes; x++ ) {
-                if( ycoords[x] * scrHeight > scrHeight - pictureHeight ) { ycoords[x] = 0; }
-                var divRef = getRefToDivNest('snFlkDiv'+x); if( !divRef ) { return; }
-                if( divRef.style ) { divRef = divRef.style; } var oPix = document.childNodes ? 'px' : 0;
-                divRef.top = ( Math.round( ycoords[x] * scrHeight ) + scrollHeight ) + oPix;
-                divRef.left = ( Math.round( ( ( xcoords[x] * scrWidth ) - (pictureWidth / 2 ) ) + ( ( scrWidth / ( ( numFlakes + 1 ) * 4 ) ) * (Math.sin( lrFlakes * ycoords[x] ) - Math.sin( 3 * lrFlakes * ycoords[x]) ) ) ) + scrollWidth ) + oPix;
-                ycoords[x] += downSpeed;
-            }
-        }
-
-        //DHTML handlers
-        function getRefToDivNest(divName) {
-            if( document.layers ) { return document.layers[divName]; } //NS4
-            if( document[divName] ) { return document[divName]; } //NS4 also
-            if( document.getElementById ) { return document.getElementById(divName); } //DOM (IE5+, NS6+, Mozilla0.9+, Opera)
-            if( document.all ) { return document.all[divName]; } //Proprietary DOM - IE4
-            return false;
-        }
-
-        window.setInterval('flakeFall();',100);
-        //]]>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            //Ẩn nội dung các menu con, trừ cái đầu tiên
+            $('.ulWrapper li:gt(0) .ulChildrent').hide();
+            //Sự kiện khi click vào 1 men cha
+            $('.aParent').click(function () {
+                //ẩn toàn bộ các menu con
+                $('.ulChildrent').slideUp();
+                //hiện menu con của menu cấp 1 hiện tại được click
+                $(this).parent('li').find('.ulChildrent').slideDown();
+            });
+        });
     </script>
+
+    <!-- Stylesheets -->
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,300italic' rel='stylesheet'
+          type='text/css'>
+    <link rel="stylesheet" href="css/docs.theme.min.css">
+
+    <!-- Owl Stylesheets -->
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/cssslider.css"/>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Yeah i know js should not be in header. Its required for demos.-->
+
+    <!-- javascript -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/owl.carousel.js"></script>
+
 </head>
 <body>
-    <div id="menu">
-        <div id="menu-nav">
-            <!--Logo-->
-            <img style="position: absolute;top: 0;left: 0;" src="images/logo.PNG"/>
-            <!--Menu 2 cấp-->
-            <nav>
-                <ul>
-                    <li><a href="#">GIỚI THIỆU</a>
-                    </li>
-                    <li><a href="#">NGHỆ SĨ</a>
-                    </li>
-                    <li><a href="#">SHOP</a>
-                    </li>
-                    <li><a href="#">ĐỐI TÁC</a>
-                    </li>
-                    <li><a href="#">TÌM HIỂU THÊM</a>
-                        <ul>
-                            <li><a href="#">MMF 2016</a></li>
-                            <li><a href="#">MMF 2015</a></li>
-                            <li><a href="#">MMF 2014</a></li>
-                            <li><a href="#">TRÁCH NHIỆM XÃ HỘI</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">THƯ VIỆN</a>
-                        <ul>
-                            <li><a href="#">HÌNH ẢNH</a></li>
-                            <li><a href="#">VIDEO</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">LIÊN HỆ</a>
-                    </li>
-                </ul>
-            </nav>
+<div id="menu">
+    <nav>
+        <header>
+            <img src="images/logo.PNG"/>
+        </header>
+        <div style="padding: 20px;">
+            <ul class="ulWrapper">
+                <li>
+                    <a href="javascript:void(0)" class="aParent">GIỚI THIỆU</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)" class="aParent">NGHỆ SĨ</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)" class="aParent">SHOP</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)" class="aParent">ĐỐI TÁC</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)" class="aParent">TÌM HIỂU THÊM</a>
+                    <ul class="ulChildrent">
+                        <li><a href="#">MMF 2016</a></li>
+                        <li><a href="#">MMF 2015</a></li>
+                        <li><a href="#">MMF 2014</a></li>
+                        <li><a href="#">TRÁCH NHIỆM XÃ HỘI</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="javascript:void(0)" class="aParent">THƯ VIỆN</a>
+                    <ul class="ulChildrent">
+                        <li><a href="#">HÌNH ẢNH</a></li>
+                        <li><a href="#">VIDEO</a></li>
+                    </ul>
+                </li>
+                <li><a href="javascript:void(0)" class="aParent">LIÊN HỆ</a>
+                </li>
+            </ul>
+        </div>
+        <footer>
             <div class="tim">
-                <input style="color: white ;    background-color: rgba(91, 91, 91, 0.56);" type="text" name="timkiem" value="" placeholder="Tìm kiếm"/>
+                <input style="background-color: rgba(91, 91, 91, 0.56);border-radius:20px; " type="text" name="timkiem" value=""
+                       placeholder="Tìm kiếm"/>
                 <div class="logo">
                     <a href="#"> <img src="images/facebook.png" width="30px" height="30px"/></a>
                     <a href="#"> <img src="images/youtube.png" width="30px" height="30px"/></a>
                     <a href="#"><img src="images/instagram.png" width="30px" height="30px"/></a>
                 </div>
-                <span style="color:#FFFFFF"> © Copyright 2017<br>Powered by Creg</span>
+                <a class="write" style="color:#FFFFFF"> © Copyright 2017 Powered by Creg</a>
+            </div>
+        </footer>
+    </nav>
+    <article>
+        <div id="clockdiv">
+            <div>
+                <span class="days"></span>
+                <div class="smalltext">Ngày</div>
+            </div>
+            <div>
+                <span class="hours"></span>
+                <div class="smalltext">Giờ</div>
+            </div>
+            <div>
+                <span class="minutes"></span>
+                <div class="smalltext">Phút</div>
+            </div>
+            <div>
+                <span class="seconds"></span>
+                <div class="smalltext">Giây</div>
             </div>
         </div>
-        <article>
-            <div id="banner">
-                <img width="1000px" src="images/banner-vi.png"/>
+        <div id="banner">
+            <img width="1000px" src="images/banner-vi.png"/>
+        </div>
+        <div class="menuinformation">
+            <div id="time"><a>10-12 Tháng Mười Một 2017</a>
+                <i class="fa fa-map-marker" style="font-size:23px"></i><a>Hoàng Thành - Thăng Long - Hà Nội</a>
             </div>
-            <div class="dongho">
-                <!--làm thời gian-->
-                <div id="countdown">
-                    <div id='tiles'></div>
-                    <div class="labels">
-                        <li>Ngày</li>
-                        <li>Giờ</li>
-                        <li>Phút</li>
-                        <li>Giây</li>
+            <div class="buy-and-detail">
+                <a href="#">Xem Chi Tiết</a>
+                <a href="#">Mua Vé Ngay</a>
+            </div>
+            <h6>CÁC ĐƠN VỊ TÀI TRỌ VÀ TỔ CHỨC</h6>
+        </div>
+        <aside>
+            <div class="khung">
+                <img class="picture" src="images/turborg.png" style="width: 200px; height: 100px;">
+                <img class="picture" src="images/vna.png" style="width: 200px; height: 100px;">
+                <img class="picture" src="images/thanhvietpro.png" style="width: 200px; height: 100px;">
+                <img class="picture" src="images/jetstar.png" style="width: 200px; height: 100px;">
+                <img class="picture" src="images/thearena.png" style="width: 200px; height: 100px;">
+            </div>
+            <section id="demos">
+                <div class="row">
+                    <div class="large-12 columns">
+                        <div class="owl-carousel owl-theme">
+                            <div class="item">
+                                <img src="images/am5.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/vnexpress.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/ticketbox.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/taxigroup.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/nguyenle.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/goldengate.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/fptplay.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/bosua.jpg" width="200px" height="70px">
+                            </div>
+                            <div class="item">
+                                <img src="images/beatvn.jpg" width="200px" height="70px">
+                            </div>
+                        </div>
                     </div>
+                    <script>
+                        $(document).ready(function () {
+                            var owl = $('.owl-carousel');
+                            owl.owlCarousel({
+                                items: 4,
+                                loop: true,
+                                margin: 10,
+                                autoplay: true,
+                                autoplayTimeout: 1000,
+                                autoplayHoverPause: true
+                            });
+                        })
+                    </script>
                 </div>
-                <div id="time"><a>10-12 Tháng Mười Một 2017</a>
-                    <i class="fa fa-map-marker" style="font-size:23px"></i><a>Hoàng Thành - Thăng Long - Hà Nội</a>
-                </div>
-                <div class="buy-and-detail">
-                    <a href="#">Xem Chi Tiết</a>
-                    <a href="#">Mua Vé Ngay</a>
-                </div>
-                <div>CÁC ĐƠN VỊ TÀI TRỌ VÀ TỔ CHỨC</div>
-            </div>
-        </article>
-        <script>
-            var target_date = new Date().getTime() + (1000 * 3600 * 48); // set the countdown date
-            var days, hours, minutes, seconds; // variables for time units
+</div>
+</section>
+</aside>
+</article>
 
-            var countdown = document.getElementById("tiles"); // get tag element
+<script type="text/javascript">
+    function getTimeRemaining(endtime) {
+        var t = Date.parse(endtime) - Date.parse(new Date());
+        var seconds = Math.floor((t / 1000) % 60);
+        var minutes = Math.floor((t / 1000 / 60) % 60);
+        var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+        var days = Math.floor(t / (1000 * 60 * 60 * 24));
+        return {
+            'total': t,
+            'days': days,
+            'hours': hours,
+            'minutes': minutes,
+            'seconds': seconds
+        };
+    }
 
-            getCountdown();
+    function initializeClock(id, endtime) {
+        var clock = document.getElementById(id);
+        var daysSpan = clock.querySelector('.days');
+        var hoursSpan = clock.querySelector('.hours');
+        var minutesSpan = clock.querySelector('.minutes');
+        var secondsSpan = clock.querySelector('.seconds');
 
-            setInterval(function () {
-                getCountdown();
-            }, 1000);
+        function updateClock() {
+            var t = getTimeRemaining(endtime);
 
-            function getCountdown() {
+            daysSpan.innerHTML = t.days;
+            hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+            minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+            secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
 
-                // find the amount of "seconds" between now and target
-                var current_date = new Date().getTime();
-                var seconds_left = (target_date - current_date) / 1000;
-
-                days = pad(parseInt(seconds_left / 86400));
-                seconds_left = seconds_left % 86400;
-
-                hours = pad(parseInt(seconds_left / 3600));
-                seconds_left = seconds_left % 3600;
-
-                minutes = pad(parseInt(seconds_left / 60));
-                seconds = pad(parseInt(seconds_left % 60));
-
-                // format countdown string + set tag value
-                countdown.innerHTML = "<span>" + days + "</span><span>" + hours + "</span><span>" + minutes + "</span><span>" + seconds + "</span>";
+            if (t.total <= 0) {
+                clearInterval(timeinterval);
             }
+        }
 
-            function pad(n) {
-                return (n < 10 ? '0' : '') + n;
-            }
+        updateClock();
+        var timeinterval = setInterval(updateClock, 1000);
+    }
 
-
-        </script>
-
-    </div>
+    var deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
+    initializeClock('clockdiv', deadline);
+</script>
+</div>
 </body>
 </html>
