--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href="main.css" type="text/css" rel="stylesheet">
     <script language="javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="script/jquery-1.8.2.min.js"></script>
-
     <script type="text/javascript">
         $(document).ready(function () {
             //Ẩn nội dung các menu con, trừ cái đầu tiên
@@ -45,148 +44,141 @@
 
 </head>
 <body>
-<div id="menu">
-    <nav>
-        <header>
-            <img src="images/logo.PNG"/>
-        </header>
-        <div style="padding: 20px;">
-            <ul class="ulWrapper">
-                <li>
-                    <a href="javascript:void(0)" class="aParent">GIỚI THIỆU</a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" class="aParent">NGHỆ SĨ</a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" class="aParent">SHOP</a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" class="aParent">ĐỐI TÁC</a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" class="aParent">TÌM HIỂU THÊM</a>
-                    <ul class="ulChildrent">
-                        <li><a href="#">MMF 2016</a></li>
-                        <li><a href="#">MMF 2015</a></li>
-                        <li><a href="#">MMF 2014</a></li>
-                        <li><a href="#">TRÁCH NHIỆM XÃ HỘI</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" class="aParent">THƯ VIỆN</a>
-                    <ul class="ulChildrent">
-                        <li><a href="#">HÌNH ẢNH</a></li>
-                        <li><a href="#">VIDEO</a></li>
-                    </ul>
-                </li>
-                <li><a href="javascript:void(0)" class="aParent">LIÊN HỆ</a>
-                </li>
-            </ul>
+<nav>
+    <header>
+        <a href="index.html"> <img src="images/logo.PNG"/></a>
+    </header>
+    <div class="menu_double" style="padding: 20px;">
+            <ul>
+                    <li><a href="introduce.html">GIỚI THIỆU</a>
+                    </li>
+                    <li><a href="#">NGHỆ SĨ</a>
+                    </li>
+                    <li><a href="#">SHOP</a>
+                    </li>
+                    <li><a href="#">ĐỐI TÁC</a>
+                    </li>
+                    <li><a href="#">TÌM HIỂU THÊM</a>
+                        <ul>
+                            <li><a href="#">MMF 2016</a></li>
+                            <li><a href="#">MMF 2015</a></li>
+                            <li><a href="#">MMF 2014</a></li>
+                            <li><a href="#">TRÁCH NHIỆM XÃ HỘI</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">THƯ VIỆN</a>
+                        <ul>
+                            <li><a href="gioithieu.html">HÌNH ẢNH</a></li>
+                            <li><a href="gioithieusinger.html">VIDEO</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">LIÊN HỆ</a>
+                    </li>
+                </ul>
+    </div>
+    <footer>
+        <div class="tim">
+            <input style="background-color: rgba(91, 91, 91, 0.56);border-radius:20px; " type="text" name="timkiem"
+                   value=""
+                   placeholder="Tìm kiếm"/>
+            <div class="logo">
+                <a href="#"> <img src="images/facebook.png" width="30px" height="30px"/></a>
+                <a href="#"> <img src="images/youtube.png" width="30px" height="30px"/></a>
+                <a href="#"><img src="images/instagram.png" width="30px" height="30px"/></a>
+            </div>
+            <a class="write" style="color:#FFFFFF"> © Copyright 2017 Powered by Creg</a>
         </div>
-        <footer>
-            <div class="tim">
-                <input style="background-color: rgba(91, 91, 91, 0.56);border-radius:20px; " type="text" name="timkiem" value=""
-                       placeholder="Tìm kiếm"/>
-                <div class="logo">
-                    <a href="#"> <img src="images/facebook.png" width="30px" height="30px"/></a>
-                    <a href="#"> <img src="images/youtube.png" width="30px" height="30px"/></a>
-                    <a href="#"><img src="images/instagram.png" width="30px" height="30px"/></a>
-                </div>
-                <a class="write" style="color:#FFFFFF"> © Copyright 2017 Powered by Creg</a>
-            </div>
-        </footer>
-    </nav>
-    <article>
-        <div id="clockdiv">
-            <div>
-                <span class="days"></span>
-                <div class="smalltext">Ngày</div>
-            </div>
-            <div>
-                <span class="hours"></span>
-                <div class="smalltext">Giờ</div>
-            </div>
-            <div>
-                <span class="minutes"></span>
-                <div class="smalltext">Phút</div>
-            </div>
-            <div>
-                <span class="seconds"></span>
-                <div class="smalltext">Giây</div>
-            </div>
+    </footer>
+</nav>
+<article>
+    <div id="clockdiv">
+        <div>
+            <span class="days"></span>
+            <div class="smalltext">Ngày</div>
         </div>
-        <div id="banner">
-            <img width="1000px" src="images/banner-vi.png"/>
+        <div>
+            <span class="hours"></span>
+            <div class="smalltext">Giờ</div>
         </div>
-        <div class="menuinformation">
-            <div id="time"><a>10-12 Tháng Mười Một 2017</a>
-                <i class="fa fa-map-marker" style="font-size:23px"></i><a>Hoàng Thành - Thăng Long - Hà Nội</a>
-            </div>
-            <div class="buy-and-detail">
-                <a href="#">Xem Chi Tiết</a>
-                <a href="#">Mua Vé Ngay</a>
-            </div>
-            <h6>CÁC ĐƠN VỊ TÀI TRỌ VÀ TỔ CHỨC</h6>
+        <div>
+            <span class="minutes"></span>
+            <div class="smalltext">Phút</div>
         </div>
-        <aside>
-            <div class="khung">
-                <img class="picture" src="images/turborg.png" style="width: 200px; height: 100px;">
-                <img class="picture" src="images/vna.png" style="width: 200px; height: 100px;">
-                <img class="picture" src="images/thanhvietpro.png" style="width: 200px; height: 100px;">
-                <img class="picture" src="images/jetstar.png" style="width: 200px; height: 100px;">
-                <img class="picture" src="images/thearena.png" style="width: 200px; height: 100px;">
-            </div>
-            <section id="demos">
-                <div class="row">
-                    <div class="large-12 columns">
-                        <div class="owl-carousel owl-theme">
-                            <div class="item">
-                                <img src="images/am5.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/vnexpress.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/ticketbox.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/taxigroup.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/nguyenle.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/goldengate.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/fptplay.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/bosua.jpg" width="200px" height="70px">
-                            </div>
-                            <div class="item">
-                                <img src="images/beatvn.jpg" width="200px" height="70px">
-                            </div>
+        <div>
+            <span class="seconds"></span>
+            <div class="smalltext">Giây</div>
+        </div>
+    </div>
+    <div id="banner">
+        <img width="100%" src="images/banner-vi.png"/>
+    </div>
+    <div class="menu-information">
+        <div id="time"><a>10-12 Tháng Mười Một 2017</a>
+            <i class="fa fa-map-marker" style="font-size:23px"></i><a>Hoàng Thành - Thăng Long - Hà Nội</a>
+        </div>
+        <div class="buy-and-detail">
+            <a href="#">Xem Chi Tiết</a>
+            <a href="#">Mua Vé Ngay</a>
+        </div>
+        <h6>CÁC ĐƠN VỊ TÀI TRỌ VÀ TỔ CHỨC</h6>
+    </div>
+    <aside>
+        <div class="khung">
+            <img class="picture" src="images/turborg.png" style="width: 200px; height: 100px;">
+            <img class="picture" src="images/vna.png" style="width: 200px; height: 100px;">
+            <img class="picture" src="images/thanhvietpro.png" style="width: 200px; height: 100px;">
+            <img class="picture" src="images/jetstar.png" style="width: 200px; height: 100px;">
+            <img class="picture" src="images/thearena.png" style="width: 200px; height: 100px;">
+        </div>
+        <section id="demos">
+            <div class="row">
+                <div class="large-12 columns">
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <img src="images/am5.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/vnexpress.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/ticketbox.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/taxigroup.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/nguyenle.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/goldengate.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/fptplay.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/bosua.jpg" width="200px" height="70px">
+                        </div>
+                        <div class="item">
+                            <img src="images/beatvn.jpg" width="200px" height="70px">
                         </div>
                     </div>
-                    <script>
-                        $(document).ready(function () {
-                            var owl = $('.owl-carousel');
-                            owl.owlCarousel({
-                                items: 4,
-                                loop: true,
-                                margin: 10,
-                                autoplay: true,
-                                autoplayTimeout: 1000,
-                                autoplayHoverPause: true
-                            });
-                        })
-                    </script>
                 </div>
-</div>
-</section>
-</aside>
+                <script>
+                    $(document).ready(function () {
+                        var owl = $('.owl-carousel');
+                        owl.owlCarousel({
+                            items: 4,
+                            loop: true,
+                            margin: 10,
+                            autoplay: true,
+                            autoplayTimeout: 1000,
+                            autoplayHoverPause: true
+                        });
+                    })
+                </script>
+            </div>
+        </section>
+    </aside>
 </article>
 
 <script type="text/javascript">
@@ -232,6 +224,5 @@
     var deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
     initializeClock('clockdiv', deadline);
 </script>
-</div>
 </body>
 </html>
